Console scrollbars + bugfixing.

--- a/assets/css/serverInfos.css
+++ b/assets/css/serverInfos.css
@@ -35,7 +35,20 @@
 
 #consoleContent {
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 100%;
+}
+
+p#consoleContent::-webkit-scrollbar {
+    display: block;
+}
+
+p#consoleContent::-webkit-scrollbar-thumb {
+    display: block;
+    background-color: white;
+    color: blue;
+    border: solid 1px white;
+    border-radius: 3px;
 }
 
 #commandHolder {
